# tinycrate

./: CHANGELOG.md  README.md  pyproject.toml
src/tinycrate/: jsonld_context.py  tinycrate.py
tests/: conftest.py  test_broken_crates.py  test_crates.py  test_entities.py  test_fetch.py  test_jsonld_context.py
tests/crates/invalid/missing_types/: ro-crate-metadata.json
