[project]
name = "tinycrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Lynch", email = "m.lynch@sydney.edu.au" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
